src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Contact_Rapport__c</fullName>
        <formula>Contact.OM_Rapport_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Rapport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Account_Number__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Carrier__c</fullName>
        <label>Carrier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Case_Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Customer_PO_Number__c</fullName>
        <label>Customer PO Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dropship</fullName>
                </value>
                <value>
                    <fullName>Will-Call</fullName>
                </value>
                <value>
                    <fullName>Same Day</fullName>
                </value>
                <value>
                    <fullName>Off Day Order</fullName>
                </value>
                <value>
                    <fullName>Regular Delivery</fullName>
                </value>
                <value>
                    <fullName>Late Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Is_Aging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OM_Product_number__c</fullName>
        <label>Product number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_RGA_Number__c</fullName>
        <label>RGA Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Returned</fullName>
                </value>
                <value>
                    <fullName>New Order Placed</fullName>
                </value>
                <value>
                    <fullName>Order Updated</fullName>
                </value>
                <value>
                    <fullName>Acceptable ETA</fullName>
                </value>
                <value>
                    <fullName>Substitute of Original Product</fullName>
                </value>
                <value>
                    <fullName>Cancelled Product from Order</fullName>
                </value>
                <value>
                    <fullName>Cancelled Order</fullName>
                </value>
                <value>
                    <fullName>Credit Issued</fullName>
                </value>
                <value>
                    <fullName>Rebill Issued</fullName>
                </value>
                <value>
                    <fullName>Closed - Other</fullName>
                </value>
                <value>
                    <fullName>Contract Updated</fullName>
                </value>
                <value>
                    <fullName>Price Updated</fullName>
                </value>
                <value>
                    <fullName>Review Credit Limit</fullName>
                </value>
                <value>
                    <fullName>Release Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Overage Returned</fullName>
                </value>
                <value>
                    <fullName>Shortage Reshipped</fullName>
                </value>
                <value>
                    <fullName>Sent Missing Paperwork</fullName>
                </value>
                <value>
                    <fullName>Sent POD</fullName>
                </value>
                <value>
                    <fullName>Credit Issued - No reship</fullName>
                </value>
                <value>
                    <fullName>Instructions not clear</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Return_Reason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UNSALEABLE/DAMAGED</fullName>
                </value>
                <value>
                    <fullName>MERCH RETURNED - SALEABLE</fullName>
                </value>
                <value>
                    <fullName>ORDER ENTRY ERR- CUST SERVICE</fullName>
                </value>
                <value>
                    <fullName>EMERGENCY RELIEF ORDER RETURN</fullName>
                </value>
                <value>
                    <fullName>UNACCEPTABLE SUBSTITUTE</fullName>
                </value>
                <value>
                    <fullName>OUTDATED/EXPIRE SHELF LIFE</fullName>
                </value>
                <value>
                    <fullName>DUPLICATE SHIPMENT</fullName>
                </value>
                <value>
                    <fullName>ORDER ENTRY ERROR-CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>ORDER ENTRY ERROR-SALES REP</fullName>
                </value>
                <value>
                    <fullName>MANUFACTURER RECALL</fullName>
                </value>
                <value>
                    <fullName>RESTOCKING FEE</fullName>
                </value>
                <value>
                    <fullName>QUARTERLY PANDAC RETURNS</fullName>
                </value>
                <value>
                    <fullName>DISASTER RELIEF</fullName>
                </value>
                <value>
                    <fullName>SURGTRK COMPONENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Shipping_address__c</fullName>
        <label>Shipping address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_UOM_Unit_of_Measure__c</fullName>
        <label>UOM (Unit of Measure)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__ADM_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>AgileAcceleratorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>OM_Customer_Service_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Service Cases</label>
        <queue>OM_Customer_Service_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OM_Email_to_Case_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Email to Case</label>
        <queue>OM_Email_to_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OM_Financial_Ops_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Financial Ops Cases</label>
        <queue>OM_Financial_Ops_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OM_Purchasing_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Purchasing Cases</label>
        <queue>OM_Purchasing_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>OM_Backorder</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Backorder</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Cash_Application</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Cash Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Collections</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Collections</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Credit_Assessment</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Credit Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Customer_Setup</fullName>
        <active>false</active>
        <businessProcess>Case</businessProcess>
        <label>Customer Setup</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Discrepancy_Case</fullName>
        <active>false</active>
        <businessProcess>Case</businessProcess>
        <label>Discrepancy Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Dispute_Resolution</fullName>
        <active>false</active>
        <businessProcess>Case</businessProcess>
        <label>Dispute Resolution</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Order_Management</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Order Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Other</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Pricing</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Pricing</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Product_Returns</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Product Returns</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Purchasing</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Purchasing</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Shipping_Issues</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Shipping Issues</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>